--- a/templates/index.html
+++ b/templates/index.html
@@ -6,31 +6,61 @@
 
 {% block content %}
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal">Boardz</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal">Boardz</h5>
     </div>
 
     <div class="container">
-      <a href="" class="btn btn-success mb-3"> Create new board</a>
+        <a href="" class="btn btn-success mb-3" id="create-board" data-toggle="modal"
+           data-target="#template-modal">
+            Create new board
+        </a>
 
         <div class="row">
-          <div class="col-md-12">
+            <div class="col-md-12">
 
-            <div class="card-deck mb-3 text-center">
-              <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                  <h4 class="my-0 font-weight-normal">Boards</h4>
+                <div class="card-deck mb-3 text-center">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Boards</h4>
+                        </div>
+                        <div class="card-body" id="boards-container">
+
+
+                        </div>
+                    </div>
+
                 </div>
-                <div class="card-body" id="boards-container">
-
-
-
-                </div>
-              </div>
 
             </div>
-
-          </div>
         </div>
 
     </div>
+
+    {#  Start MODAL  #}
+    <!-- Modal -->
+    <div class="modal fade" id="template-modal" tabindex="-1" role="dialog" aria-labelledby="templateModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="alert alert-danger float-left" role="alert">Please insert a title!</div>
+                    <div class="alert alert-success float-left" role="alert">Title added successfully!</div>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="user-data-modal" id="label-modal"></label>
+                            <input type="text" class="form-control" id="user-data-modal" name="modal-data" required>
+
+                        </div>
+                        <button type="submit" class="btn btn-primary" id="modal-button">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#  End MODAL  #}
 {% endblock %}
