Add rename column functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,6 @@
 
     </div>
 
-    {#  Start MODAL  #}
     <!-- Modal -->
     <div class="modal fade" id="template-modal" tabindex="-1" role="dialog" aria-labelledby="templateModalLabel"
          aria-hidden="true">
@@ -54,13 +53,12 @@
                         <div class="form-group">
                             <label for="user-data-modal" id="label-modal"></label>
                             <input type="text" class="form-control" id="user-data-modal" name="modal-data" required>
-
                         </div>
-                        <button type="submit" class="btn btn-primary" id="modal-button">Submit</button>
+                        <button type="submit" class="btn btn-primary" id="modal-button">Save</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    {#  End MODAL  #}
+    <!--  End MODAL  -->
 {% endblock %}
