Add user registration / login

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="../static/css/fontawesome5.13.all.min.css">
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap4.4.1.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/stylish.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}">
