--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block head %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dragula.min.css') }}">
+    <script src="{{ url_for('static', filename='js/dragula.min.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/app.js') }}" defer></script>
 {% endblock %}
 
