--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                 </li>
                 {% if session['logged_in'] %}
                     <li class="nav-item ml-2">
-                        <a class="nav-link" id="statistics" href="#">Create Private Board</a>
+                        <a class="nav-link" id="make-private-board" href="">Create Private Board</a>
                     </li>
                     <li class="nav-item ml-2">
                         <a class="nav-link" href="/user-logout">Logout</a>
@@ -38,13 +38,15 @@
 
 
             </ul>
-            <span class="navbar-text mr-3">
-                {% if session['logged_in'] %}
+            {% if session['logged_in'] %}
+                <span class="navbar-text mr-3" data-user-id="{{ session['user_id'] }}" id="user-logged-in">
                     Signed in as {{ session['username'] }}
-                {% else %}
+                </span>
+            {% else %}
+                <span class="navbar-text mr-3" id="user-logged-in">
                     Not signed in
-                {% endif %}
-            </span>
+                </span>
+            {% endif %}
         </div>
     </nav>
 
