--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
                 <li class="nav-item active ml-2">
                     <a class="nav-link" href="#">Proman Boards<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item ml-2">
+                    <a class="nav-link archived-list" href="">Archived tasks</a>
+                </li>
                 {% if session['logged_in'] %}
                     <li class="nav-item ml-2">
                         <a class="nav-link" id="make-private-board" href="">Create Private Board</a>
@@ -122,4 +125,21 @@
         </div>
     </div>
     <!--  End MODAL Confirm -->
+    <!-- Modal Archive -->
+    <div class="modal fade" id="archive-modal" tabindex="-1" role="dialog" aria-labelledby="templateModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="archive-modal-title">Archived Tasks</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="archive-modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  End MODAL Archive -->
 {% endblock %}
